feat(产品服务): 重构产品相关服务以支持更丰富的产品数据
- 新增ProductViewCountDTO用于返回产品视图统计信息
- 修改热门产品接口返回包含视图统计的DTO列表
- 重构产品详情服务以支持规格和特性的关联查询
- 优化用户行为日志服务的记录和统计逻辑
- 移除产品搜索关键词的软删除过滤条件